# bayesopt_multisolution

./: .gitignore  CMakeLists.txt  Doxyfile.in
cmake/: PythonMagic.cmake
examples/: CMakeLists.txt  CMakeLists.txt.orig  bo_bbo_lp.cpp  bo_branin.cpp  bo_branin_display.cpp  bo_branin_noise.cpp  bo_cli.cpp  bo_cli_batch_sampling.cpp  bo_cli_boltzmann_crit_sampling.cpp  bo_cli_crit_sampling.cpp  bo_cli_entropy_search.cpp  bo_cli_posterior_sampling.cpp  bo_cli_random_sampling.cpp  bo_cli_ubo.cpp  bo_cont.cpp  bo_crit_sampling_display.cpp  bo_display.cpp  bo_hard_display.cpp  bo_hartmann.cpp  bo_nonstationary_display.cpp  bo_polish_opt.cpp  bo_rembo.cpp  branin_system_calls.cpp  branin_xml.cpp  testfunctions.cpp  testfunctions.hpp
experiments/: functions.py  gp_sample_optimization.py  keras_example.py  run_all.py  vae_example.py
experiments/kvae/: vae.py
experiments/robot/: gpyopt_push3.py
include/: bopt_state.hpp  dataset.hpp  fixed_dataset.hpp  inneroptimization.hpp  mcmc_sampler.hpp  optimizable.hpp  unscented_transform.hpp
include/bayesopt/: bayesopt.h  bayesopt.hpp  bayesoptbase.hpp  parameters.h  parameters.hpp
include/criteria/: criteria_a_opt.hpp  criteria_batch_combined.hpp  criteria_combined.hpp  criteria_distance.hpp  criteria_ei.hpp  criteria_entropy_search.hpp  criteria_expected.hpp  criteria_functors.hpp  criteria_hedge.hpp  criteria_lcb.hpp  criteria_lp.hpp  criteria_mi.hpp  criteria_ms.hpp  criteria_poi.hpp  criteria_prod.hpp  criteria_thompson.hpp
include/distributions/: gauss_distribution.hpp  joint_prob_distribution.hpp  prob_distribution.hpp  student_t_distribution.hpp
include/kernels/: kernel_combined.hpp  kernel_const.hpp  kernel_functors.hpp  kernel_nonstationary.hpp  kernel_prod.hpp  kernel_sum.hpp  kernel_warp.hpp
include/means/: mean_atomic.hpp  mean_combined.hpp
include/posteriors/: posterior_discrete.hpp  posterior_empirical.hpp  posterior_fixed.hpp  posterior_mcmc.hpp  posterior_model.hpp
include/surrogates/: conditionalbayesprocess.hpp  gaussian_process.hpp  gaussian_process_hierarchical.hpp  gaussian_process_ml.hpp  gaussian_process_normal.hpp  kernelregressor.hpp  nonparametricprocess.hpp  student_t_process_jef.hpp  student_t_process_nig.hpp
matlab/: bayesoptextras.h  bayesoptlog.c  compile_matlab.m  compile_octave.m  demo_walker.m
matlab/testfunctions/: michalewicz.m
python/: CartPoleEnvironmentGN2.py  MountainCarEnvironment.py  RLBayesOpt.py  bayesopt.cpp  bayesopt.pyx  bayesoptmodule.py  demo_batch_ubo.py  demo_eggholder.py  demo_polish_optimization.py  demo_quad.py  demo_rastr.py  demo_ubo.py  rkhs.py  run_ubo_sampling_tests.py  surrogate_datasets.py  surrogate_datasets_hierarchical.py  test_save_restore.py  test_ubo_avg.py  test_ubo_plot_mixture.py
python/ubo_sampling_functions/: ebo_helper.py  functions.py  push_function_one.py  push_utils.py  rover_function.py  rover_maps.py  rover_utils.py
python/ubo_sampling_functions/robot/: generate_simudata3.py  gpyopt_push3.py  push_world.py
src/: bayesoptbase.cpp  bayesoptcont.cpp  bayesoptdisc.cpp  bopt_state.cpp  dataset.cpp  fixed_dataset.cpp  inneroptimization.cpp  mcmc_sampler.cpp  mean_functors.cpp  parameters.cpp
src/criteria/: criteria_functors.cpp  criteria_hedge.cpp
src/distributions/: gauss_distribution.cpp  student_t_distribution.cpp
src/kernels/: kernel_functors.cpp
src/posteriors/: posterior_discrete.cpp  posterior_empirical.cpp  posterior_fixed.cpp  posterior_mcmc.cpp  posterior_model.cpp
src/surrogates/: conditionalbayesprocess.cpp  gaussian_process.cpp  gaussian_process_hierarchical.cpp  gaussian_process_ml.cpp  gaussian_process_normal.cpp  kernelregressor.cpp  nonparametricprocess.cpp  student_t_process_jef.cpp  student_t_process_nig.cpp
src/wrappers/: bayesoptwpr.cpp
tests/: CMakeLists.txt  test_initial_samples.cpp  test_mcmc.cpp
utils/: boundingbox.hpp  displaycrit.cpp  displaycrit.hpp  displaygp.cpp  displaygp.hpp  fileparser.cpp  lhs.hpp  param_loader.cpp  spsa.hpp  ublas_elementwise.hpp  ublas_extra.cpp  ublas_extra.hpp
